<resources>
    <string name="app_name">Find Your Phone</string>
    <string name="splash_title">Lost Your Phone? Just\nClap or Whistle!</string>
    <string name="splash_get_started">Get Started</string>
    <string name="splash_privacy_policy">Privacy Policy</string>
    <string name="splash_terms_of_service">Terms of Service</string>

    <string name="home_detection_on">Clap &amp; Whistle  Detection is ON</string>
    <string name="home_detection_off">Clap &amp; Whistle  Detection is OFF</string>
    <string name="home_toggle_on">ON</string>
    <string name="home_toggle_off">Off</string>
    <string name="home_find_phone_by_clap">Find Phone by\nClap</string>
    <string name="home_find_phone_by_whistle">Find Phone by\nWhistle</string>
    <string name="home_sound">Sound</string>
    <string name="home_vibration">Vibration</string>
    <string name="home_flashlight">Flashlight</string>
    <string name="home_alert_sound">Alert Sound</string>
    <string name="home_alert_duration">Alert Duration</string>
    <string name="home_alert_sound_bell">Bell</string>
    <string name="home_alert_duration_10sec">10 sec</string>

    <string name="setting_alert_sound_title">Alert Sound</string>
    <string name="setting_alert_sound_volume">Alert Sound Volume</string>
    <string name="setting_tap_to_play_sound">Tap to play Sound</string>
    <string name="setting_save">Save</string>

    <string name="rate_dialog_title">Do you like %s?</string>
    <string name="rate_dialog_subtitle">Rate your experience</string>
    <string name="rate_dialog_submit">Submit</string>
    <string name="rate_dialog_later">Later</string>

    <string name="test_mic_dialog_title">Clap &amp; Whistle to Test Phone Detection</string>
    <string name="test_mic_dialog_desc">Clap your hands or whistle near your phone to test the feature. Your phone will ring or vibrate when it detects the sound.</string>
    <string name="test_mic_dialog_desc_bold">Clap your hands </string>
    <string name="test_mic_dialog_desc_dark">or whistle</string>
    <string name="test_mic_dialog_later">I\'ll test it later</string>

    <string name="alert_duration_dialog_title">ALERT DURATION</string>
    <string name="alert_duration_10_sec">10 sec</string>
    <string name="alert_duration_30_sec">30 sec</string>
    <string name="alert_duration_60_sec">60 sec</string>
    <string name="alert_duration_120_sec">120 sec</string>
    <string name="alert_duration_ok">Ok</string>
    <string name="alert_duration_cancel">Cancel</string>
    <string name="alert_duration_seconds">%d sec</string>

    <string name="mic_dialog_title">Your Mic, Used Only  When Needed</string>
    <string name="mic_dialog_desc">Our app listens only for claps or whistles when you\'re not using your phone, safeguarding your privacy and conserving battery life.</string>
    <string name="mic_dialog_desc_highlight1">not using your phone,</string>
    <string name="mic_dialog_desc_bold1">safeguarding your privacy</string>
    <string name="mic_dialog_desc_bold2">conserving battery life.</string>
    <string name="mic_dialog_got_it">Got it</string>

    <string name="guide_intro_line1">Tap the <font color="#FFEC17">switch</font> to turn on phone\ntracking.</string>
    <string name="guide_intro_line2">When tracking is <font color="#FFEC17">ON</font>, you\'ll be able\nto find your phone by clapping or\nwhistling.</string>

    <string name="notification_channel_name">Sound Detection</string>
    <string name="notification_channel_desc">Listening for clap and whistle sounds</string>
    <string name="notification_title">Find My Phone</string>
    <string name="notification_text">Listening for clap &amp; whistle…</string>
    <string name="notification_alerting_title">We\'re ready to Find Your Phone!</string>
    <string name="notification_alerting_disable">Disable Clap &amp; Whistle Detection</string>
    <string name="notification_alerting_disable_short">Disable</string>
    <string name="permission_denied">Permission denied</string>
    <string name="agreement_page_unavailable">Unable to open this page on this device.</string>
</resources>
