<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rate_dialog_top"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="30dp"
    android:paddingEnd="16dp"
    android:paddingBottom="34dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/alert_duration_dialog_title"
        android:textColor="@color/text_title"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layoutOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOption10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/alert_duration_10_sec"
            android:textColor="@color/text_medium"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/tvOption30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="16dp"
            android:text="@string/alert_duration_30_sec"
            android:textColor="@color/text_medium"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/tvOption60"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:paddingBottom="16dp"
            android:text="@string/alert_duration_60_sec"
            android:textColor="@color/text_medium"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <TextView
            android:id="@+id/tvOption120"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/alert_duration_120_sec"
            android:textColor="@color/text_medium"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/bg_cancel_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/alert_duration_cancel"
            android:textColor="@color/text_medium"
            android:textSize="16sp" />

        <View
            android:layout_width="13dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rate_submit_button"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/alert_duration_ok"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
